# novum-cloud-api-examples

./: README.md  package-lock.json  package.json  readme.md
Typescript/createBattery/: createBattery.ts  package.json
Typescript/createBatteryType/: createBatteryType.ts  package.json
Typescript/getBatteryById/: getBatteryById.ts  package.json
Typescript/login/: login.ts  package.json
Typescript/queryBaterries/: package.json  queryBatteries.ts
Typescript/removeBatteryById/: package.json  removeBatteryById.ts
Typescript/updateBaterry/: package.json  updateBattery.ts
python/: readme.md
python/createBattery/: createBattery.py  readme.md
python/createBatteryType/: createBatteryType.py  pyproject.toml  readme.md
python/getBatteryById/: getBatteryById.py  readme.md
python/login/: login.py  readme.md
python/nestBattery/: nestBattery.py  pyproject.toml  readme.md
python/queryBaterries/: queryBaterries.py  readme.md
python/queryBatteries/: queryBatteries.py  readme.md
python/removeBattery/: readme.md  removeBattery.py
python/updateBaterry/: readme.md  updateBaterry.py
python/updateBattery/: readme.md  updateBattery.py
typescript/: package.json  readme.md
typescript/createBattery/: createBattery.ts  package-lock.json  package.json  readme.md
typescript/createBatteryType/: createBatteryType.ts  package-lock.json  package.json  readme.md
typescript/getBatteryById/: getBatteryById.ts  package-lock.json  package.json  readme.md
typescript/login/: login.ts  package-lock.json  package.json  readme.md
typescript/nestBattery/: nestBattery.ts  (+2 more)
(+16 files in other folders)
