[tool.poetry]
name = "python-examples"
version = "3.0.0"
description = "Requirement to run NovumApiClient"
authors = ["Leonardo <l.biz@novum-engineering.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.28.2"
dataclasses-json = "^0.6.3"
novum_api_client = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"